[package]
name = "car_demo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
bevy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# local deps
rbda = { path = "../rbda" }
rbda_bevy = {path = "../rbda_bevy"}